// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check core function support escape path get 1`] = `
{
  "d": {
    "e": {
      "arr": [
        {
          "f": true,
        },
        {
          "f": true,
        },
      ],
    },
  },
  "y": true,
}
`;

exports[`check core function support escape path set 1`] = `999`;

exports[`check core function support input array paths get 1`] = `
{
  "d": {
    "e": {
      "arr": [
        {
          "f": true,
        },
        {
          "f": true,
        },
      ],
    },
  },
  "x": true,
}
`;

exports[`check core function support input array paths set 1`] = `999`;
